--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .body {
-	background: url(/img/background/first_section.png) no-repeat center;
+	background: url(../img/background/first_section.png) no-repeat center;
 	background-size: cover;
 }
 .wrapper {
