--- a/css/style.css
+++ b/css/style.css
@@ -29,62 +29,93 @@
 }
 .logo {
 }
+@media (max-width: 400px) {
+	.logo {
+		width: 250px;
+	}
+}
+@media (max-width: 340px) {
+	.logo {
+		width: 200px;
+	}
+}
 .header__menu {
-}
-.menu {
-}
-.menu__list {
-	display: flex;
-}
-.menu__item {
-	margin: 0 5px 0 0;
-	padding: 25px 50px;
-	position: relative;
-	background-color: #2C2E35;
-	border-radius: 10px;
-	transition: background-color .15s;
-}
-.menu__item:hover {
-	background-color: #07B891;
-}
-.menu__item:hover .menu__link {
-	color: #fff;
-}
-.menu__item:hover .sub-menu {
-	display: block;
-}
-.menu__link {
-	color: #07B891;
-	transition: color .15s;
-}
-.menu__link,
-.sub-menu__link {
-	font-size: 18px;
-	font-weight: 550;
-}
-.sub-menu {
 	display: none;
-	position: absolute;
-	top: 60px;
-	left: 0px;
 }
-.sub-menu__list {
-	margin: 13px 0 0 0;
-	padding: 20px 0;
-	background-color: #2C2E35;
-	border-radius: 10px;
+@media (min-width: 1150px) {
+	.header__menu {
+		display: block;
+	}
+	.menu {
+	}
+	.menu__list {
+		display: flex;
+	}
+	.menu__item {
+		margin: 0 5px 0 0;
+		padding: 25px 50px;
+		position: relative;
+		background-color: #2C2E35;
+		border-radius: 10px;
+		transition: background-color .15s;
+	}
+	.menu__item:hover {
+		background-color: #07B891;
+	}
+	.menu__item:hover .menu__link {
+		color: #fff;
+	}
+	.menu__item:hover .sub-menu {
+		display: block;
+	}
+	.menu__link {
+		color: #07B891;
+		transition: color .15s;
+	}
+	.menu__link,
+	.sub-menu__link {
+		font-size: 18px;
+		font-weight: 550;
+	}
+	.sub-menu {
+		display: none;
+		position: absolute;
+		top: 60px;
+		left: 0px;
+	}
+	.sub-menu__list {
+		margin: 13px 0 0 0;
+		padding: 20px 0;
+		background-color: #2C2E35;
+		border-radius: 10px;
+	}
+	.sub-menu__item {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		width: 390px;
+		padding: 10px 30px;
+	}
+	.sub-menu__link {
+		color: #fff;
+		transition: all .15s;
+	}
+	.sub-menu__link:hover {
+		color: #ffffff7c;
+	}
 }
-.sub-menu__item {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	width: 390px;
-	padding: 10px 30px;
+.header__menu-mobile {
+	display: none;
 }
-.sub-menu__link {
-	color: #fff;
-	transition: all .15s;
-}
-.sub-menu__link:hover {
-	color: #ffffff7c;
+@media (max-width: 1149px) {
+	.header__menu-mobile {
+		display: block;
+	}
+	.header__menu-button {
+		padding: 20px;
+		background-color: #2C2E35;
+		border-radius: 10px;
+	}
+	.header__menu-img {
+	}
 }
