--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,24 @@
 	}
 	.header__menu-img {
 	}
+	.menu-mobile {
+	}
+	.menu-mobile__list {
+	}
+	.menu-moblie__item {
+	}
+	.menu-mobile__link {
+	}
+	.sub-menu-mobile {
+	}
+	.sub-menu-mobile__list {
+	}
+	.sub-menu-mobile__item {
+	}
+	.sub-menu-mobile__link {
+	}
+	.sub-menu-mobile__img {
+	}
 }
 
 /* MAIN */
