--- a/css/style.css
+++ b/css/style.css
@@ -46,72 +46,72 @@
 	.header__menu {
 		display: block;
 	}
-	.menu {
-	}
-	.menu__list {
-		display: flex;
-	}
-	.menu__item {
-		margin: 0 5px 0 0;
-		padding: 25px 50px;
-		position: relative;
-		background-color: #2C2E35;
-		border-radius: 10px;
-		transition: background-color .15s;
-	}
-	.menu__item:last-child {
-		margin: 0;
-	}
-	.menu__item:hover {
-		background-color: #07B891;
-	}
-	.menu__item:hover .menu__link {
-		color: #fff;
-	}
-	.menu__item:hover .sub-menu {
-		display: block;
-	}
-	.menu__item-active {
-		background-color: #07B891;
-	}
-	.menu__link {
-		color: #07B891;
-		transition: color .15s;
-	}
-	.menu__link-active {
-		color: #fff;
-	}
-	.menu__link,
-	.sub-menu__link {
-		font-size: 18px;
-		font-weight: 550;
-	}
-	.sub-menu {
-		display: none;
-		position: absolute;
-		top: 60px;
-		left: 0px;
-	}
-	.sub-menu__list {
-		margin: 13px 0 0 0;
-		padding: 20px 0;
-		background-color: #2C2E35;
-		border-radius: 10px;
-		width: 390px;
-	}
-	.sub-menu__item {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		padding: 10px 30px;
-	}
-	.sub-menu__link {
-		color: #fff;
-		transition: all .15s;
-	}
-	.sub-menu__item:hover .sub-menu__link {
-		color: #ffffff7c;
-	}
+}
+.menu {
+}
+.menu__list {
+	display: flex;
+}
+.menu__item {
+	margin: 0 5px 0 0;
+	padding: 25px 50px;
+	position: relative;
+	background-color: #2C2E35;
+	border-radius: 10px;
+	transition: background-color .15s;
+}
+.menu__item:last-child {
+	margin: 0;
+}
+.menu__item:hover {
+	background-color: #07B891;
+}
+.menu__item:hover .menu__link {
+	color: #fff;
+}
+.menu__item:hover .sub-menu {
+	display: block;
+}
+.menu__item-active {
+	background-color: #07B891;
+}
+.menu__link {
+	color: #07B891;
+	transition: color .15s;
+}
+.menu__link-active {
+	color: #fff;
+}
+.menu__link,
+.sub-menu__link {
+	font-size: 18px;
+	font-weight: 550;
+}
+.sub-menu {
+	display: none;
+	position: absolute;
+	top: 60px;
+	left: 0px;
+}
+.sub-menu__list {
+	margin: 13px 0 0 0;
+	padding: 20px 0;
+	background-color: #2C2E35;
+	border-radius: 10px;
+	width: 390px;
+}
+.sub-menu__item {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 10px 30px;
+}
+.sub-menu__link {
+	color: #fff;
+	transition: all .15s;
+}
+.sub-menu__item:hover .sub-menu__link {
+	color: #ffffff7c;
 }
 .header__menu-mobile {
 	display: none;
@@ -119,7 +119,6 @@
 @media (max-width: 1149px) {
 	.header__menu-mobile {
 		display: block;
-		position: relative;
 	}
 	.header__menu-button {
 		padding: 20px;
@@ -129,18 +128,53 @@
 	.header__menu-img {
 	}
 	.menu-mobile {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100%;
+		background-color: #24262C;
+		transition: transform .4s;
+	}
+	.menu-mobile__hide {
+		transform: translate(100%, 0);
+	}
+	.menu-mobile__header {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin: 16px 0;
+	}
+	.menu-mobile__content {
+		margin: 46px 0 0 0;
 	}
 	.menu-mobile__list {
 	}
 	.menu-moblie__item {
+		padding: 20px;
+		margin: 0 0 5px 0;
+		text-align: center;
 	}
-	.menu-mobile__link {
+	.menu-moblie__item:first-child {
+		text-align: left;
+	}
+	.menu-mobile__link:first-child {
+		margin: 0 0 10px 0;
+	}
+	.menu-mobile__line {
+		width: 100%;
+		border: 0.5px solid #FFFFFF1A;
+		margin-top: 20px;
 	}
 	.sub-menu-mobile {
 	}
 	.sub-menu-mobile__list {
 	}
 	.sub-menu-mobile__item {
+		padding: 16px 0;
+	}
+	.sub-menu-mobile__item:last-child {
+		padding: 16px 0 0 0;
 	}
 	.sub-menu-mobile__link {
 	}
