--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@
 		top: 0;
 		left: 0;
 		width: 100vw;
-		height: 100%;
+		height: calc(100vh + 150px);
 		background-color: #24262C;
 		transition: transform .4s;
 	}
