--- a/css/style.css
+++ b/css/style.css
@@ -131,10 +131,11 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 100vw;
-		height: calc(100vh + 150px);
+		width: 100%;
+		height: 100%;
 		background-color: #24262C;
 		transition: transform .4s;
+		overflow: auto;
 	}
 	.menu-mobile__hide {
 		transform: translate(100%, 0);
