fix bugs with menu mobile of height

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 100%;
+		width: 100vw;
 		height: 100%;
 		background-color: #24262C;
 		transition: transform .4s;
