--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
+	position: relative;
 }
 .container {
 	max-width: 1420px;
@@ -119,6 +120,7 @@
 @media (max-width: 1149px) {
 	.header__menu-mobile {
 		display: block;
+		overflow: hidden;
 	}
 	.header__menu-button {
 		padding: 20px;
