--- a/css/style.css
+++ b/css/style.css
@@ -239,3 +239,60 @@
 	padding: clamp(15px, 2vw, 27px);
 	border-radius: clamp(5px, 0.7vw, 10px);
 }
+
+/* ABOUT */
+
+.about {
+	background-color: #24262C;
+	border-radius: 30px;
+}
+.about__content {
+	padding: 110px 0;
+}
+.info {
+}
+.info__header {
+	display: flex;
+}
+@media (max-width: 640px) {
+	.info__header {
+		flex-direction: column;
+	}
+}
+.info__title {
+	font-size: 18px;
+	color: #FFFFFF99;
+	flex: 0 1 33%;
+}
+@media (max-width: 640px) {
+	.info__title {
+		margin: 0 0 30px 0;
+	}
+}
+.info__description {
+	flex: 0 1 67%;
+}
+.description {
+}
+.description__title {
+	font-size: clamp(24px, 3.3vw, 48px);
+	font-weight: 700;
+	color: #FFFFFF;
+}
+.description__body {
+	display: flex;
+	margin: 60px 0 0 0;
+}
+@media (max-width: 640px) {
+	.description__body {
+		flex-direction: column;
+	}
+}
+.description__content {
+	margin: 0 30px 0 0;
+}
+.description__text {
+	font-size: 18px;
+	color: #FFFFFF99;
+	margin-bottom: 20px;
+}
