--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,11 @@
 .about__content {
 	padding: 110px 0;
 }
+@media (max-width: 640px) {
+	.about__content {
+		padding: 55px 0;
+	}
+}
 .info {
 }
 .info__header {
@@ -286,6 +291,7 @@
 @media (max-width: 640px) {
 	.description__body {
 		flex-direction: column;
+		margin: 30px 0 0 0;
 	}
 }
 .description__content {
