--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@
 
 .about {
 	background-color: #24262C;
-	border-radius: 30px;
+	border-radius: clamp(15px, 2vw, 30px);
 }
 .about__content {
 	padding: 110px 0;
@@ -297,8 +297,145 @@
 .description__content {
 	margin: 0 30px 0 0;
 }
+@media (max-width: 640px) {
+	.description__content {
+		flex-direction: column;
+		margin: 0;
+	}
+}
 .description__text {
 	font-size: 18px;
 	color: #FFFFFF99;
 	margin-bottom: 20px;
+}
+
+.info__body {
+	width: 100%;
+}
+@media(max-width: 600px) {
+	.info__body {
+		width: auto;
+	}
+}
+.info__cards {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	margin: 0 -5px;
+}
+@media(max-width: 768px) {
+	.info__cards {
+		display: flex;
+		margin: 0 auto;
+	}
+}
+@media(max-width: 600px) {
+	.info__cards {
+		display: flex;
+		flex-direction: column;
+		margin: 0 auto;
+	}
+}
+.info__card {
+	display: flex;
+	margin: 0 0 5px 0;
+	padding: 0 5px;
+	flex: 1 1 33.333%;
+}
+@media(max-width: 768px) {
+	.info__card {
+		display: flex;
+		margin: 0 0 10px 0;
+		flex: 1 1 50%;
+	}
+}
+@media(max-width: 600px) {
+	.info__card {
+		padding: 0;
+	}
+}
+.card {
+
+}
+.card__item {
+	display: flex;
+	flex-direction: column;
+	padding: 30px 20px;
+	background-color: #2C2E35;
+	border-radius: clamp(10px, 1.4vw, 20px);;
+	color: #fff;
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+}
+.info__card:first-child .card__item {
+	color: #2C2E35;
+	background-color: #07B891;
+}
+.card__count {
+	
+}
+.card__number {
+	font-size: 18px;
+	z-index: 2;
+}
+.card__content {
+	position: relative;
+}
+.card__info {
+	display: flex;
+	flex-direction: column;
+	font-weight: 550;
+	z-index: 2;
+	margin: clamp(293px, 29vw, 425px) 0 0 0;
+}
+.card__statistics {
+	font-size: 60px;
+}
+.card__description {
+	font-size: 22px;
+}
+.card__img-first,
+.card__img-second,
+.card__img-thrid {
+	position: absolute;
+	z-index: 0;
+	bottom: 0;
+	right: 0;
+}
+.card__img-first {
+	width: clamp(260px, 28vw, 417px);
+}
+.card__img-second {
+	left: 0;
+	justify-self: center;
+	align-self: center;
+	width: clamp(450px, 55.5vw, 784px);
+}
+.card__img-thrid {
+	width: clamp(252px, 26vw, 377px);
+}
+@media(max-width: 768px) {
+	.card__img-second {
+		position: absolute;
+		z-index: 0;
+		width: clamp(450px, 80vw, 784px);
+		bottom: 0;
+		left: 0;
+		right: 0;
+		justify-self: center;
+		align-self: center;
+	}
+}
+@media(max-width: 600px) {
+	.card__img-second {
+		position: absolute;
+		z-index: 0;
+		width: clamp(500px, 100vw, 784px);
+		bottom: 0;
+		left: 0;
+		right: 0;
+		justify-self: center;
+		align-self: center;
+	}
 }
