--- a/css/style.css
+++ b/css/style.css
@@ -258,10 +258,12 @@
 }
 .info__header {
 	display: flex;
+	margin-bottom: clamp(30px, 6.25vw, 90px);
 }
 @media (max-width: 640px) {
 	.info__header {
 		flex-direction: column;
+		margin-bottom: clamp(30px, 6.25vw, 90px);
 	}
 }
 .info__title {
@@ -307,6 +309,9 @@
 	font-size: 18px;
 	color: #FFFFFF99;
 	margin-bottom: 20px;
+}
+.description__content:last-child .description__text:last-child {
+	margin-bottom: 0;
 }
 
 .info__body {
