--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,11 @@
 	font-family: 'Helvetica Neue';
 }
 .wrapper {
-	overflow: hidden;
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
 	position: relative;
+	contain: paint;
 }
 .container {
 	max-width: 1420px;
@@ -267,9 +267,11 @@
 	}
 }
 .info__title {
-	font-size: 18px;
-	color: #FFFFFF99;
 	flex: 0 1 33%;
+}
+.info__text {
+	color: #FFFFFF99;
+	font-size: 18px;
 }
 @media (max-width: 640px) {
 	.info__title {
@@ -309,6 +311,7 @@
 	font-size: 18px;
 	color: #FFFFFF99;
 	margin-bottom: 20px;
+	line-height: 110%;
 }
 .description__content:last-child .description__text:last-child {
 	margin-bottom: 0;
@@ -531,4 +534,216 @@
 		justify-self: center;
 		align-self: center;
 	}
+}
+
+/* EQUIPMENT */
+
+.equipment {
+	border-radius: clamp(15px, 2vw, 30px);
+	background-color: #202227;
+	margin: -50px 0 0 0;
+}
+.equipment__header {
+	margin-bottom: clamp(30px, 6.25vw, 90px);
+}
+.equipment__title {
+	position: sticky;
+	top: 30px;
+	height: min-content;
+}
+@media (max-width: 640px) {
+	.equipment__title {
+		position: initial;
+	}
+}
+.equipment__description {
+	font-size: clamp(22px, 2.5vw, 36px);
+	font-weight: 500;
+	color: #FFFFFF;
+	margin-top: 30px;
+}
+.equipment__text {
+
+}
+.equipment__cards {
+	display: grid;
+	grid-template-columns: repeat(2, minmax(250px, 1fr));
+	grid-template-rows: repeat(3, minmax(600px, 700px));
+	gap: 10px;
+}
+@media(max-width: 846px) {
+	.equipment__cards {
+		display: grid;
+		grid-template-columns: repeat(1, minmax(250px, 1fr));
+		grid-template-rows: repeat(4, clamp(550px, 48vw, 700px));
+		gap: 10px;
+	}
+}
+.equipment__card {
+	background-color: #24262C;
+	border-radius: clamp(10px, 1.4vw, 20px);
+	display: flex;
+	flex-direction: column;
+}
+.equipment__card-big {
+	grid-column: span 2;
+}
+@media(max-width: 846px) {
+	.equipment__card-big {
+		grid-column: span 1;
+	}
+}
+.equipment__card-header {
+	margin: 30px 20px;
+}
+.equipment__card-info {
+	font-size: 18px;
+	color: #FFFFFF99;
+}
+.equipment__card-name {
+	font-size: 26px;
+	font-weight: 500;
+	color: #fff;
+	margin: 16px 0 0 0;
+}
+.equipment__card-body {
+	width: 100%;
+	height: 100%;
+	background-color: #2C2E35;
+	border-radius: inherit;
+	position: relative;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.equipment__card-container {
+	height: clamp(155px, 36vw, 525px);
+	width: auto;
+	display: flex;
+}
+.equipment__card-img {
+	max-width: 100%;
+	max-height: 100%;
+}
+.equipment__card-btn {
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+}
+.card-btn {
+}
+.card-btn__link {
+}
+.card-btn__img {
+}
+
+/* ABOUT */
+
+.about {
+	margin: -50px 0 0 0;
+}
+.about__second {
+	position: relative;
+	z-index: 10;
+}
+.about__second .info__header {
+	margin: 0;
+}
+.about__image-container {
+	max-height: 700px;
+	min-height: 400px;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	border-radius: clamp(15px, 2vw, 30px);
+	overflow: hidden;
+	margin: -50px 0 0 0;
+}
+.about__image {
+	object-fit: cover;
+}
+
+/* SERVICES */
+
+.services {
+	background: #202227;
+	border-radius: clamp(15px, 2vw, 30px);
+	margin: -50px 0 0 0;
+	z-index: 100;
+	position: relative;
+}
+
+.services__content {
+	padding: 110px 0;
+}
+@media (max-width: 640px) {
+	.services__content {
+		padding: 55px 0;
+	}
+}
+.services__header .info__title {
+	margin-bottom: 0;
+}
+.services__body {
+}
+.services__cards {
+	display: grid;
+	grid-template-columns: repeat(2, minmax(250px, 1fr));
+	grid-template-rows: repeat(3, 400px);
+	gap: 10px;
+}
+@media (max-width: 764px) {
+	.services__cards {
+		display: grid;
+		grid-template-columns: repeat(1, minmax(250px, 1fr));
+		grid-template-rows: repeat(6, minmax(300px, 400px));
+		gap: 10px;
+	}
+}
+.services__card {
+}
+.services__card-content {
+	width: 100%;
+	height: 100%;
+	background: #24262C;
+	border-radius: clamp(10px, 1.4vw, 20px);
+	padding: 30px 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.services__card-header {
+	display: flex;
+	flex-direction: column;
+}
+.services__card-date {
+	color: #FFFFFF99;
+	font-size: 18px;
+}
+.services__card-name {
+	font-size: 26px;
+	font-weight: 550;
+	margin: 20px 0 0 0;
+	color: #fff;
+}
+.services__card-body {
+	display: flex;
+}
+.services__card-description {
+	font-size: 22px;
+	font-weight: 400;
+	color: #FFFFFF99;
+}
+.services__card-button {
+	position: relative;
+	right: -10px;
+    bottom: -18px;
+	align-self: end;
+}
+.card-btn__link {
+}
+.card-btn__img {
+	
+}
+.welcome__button-img {
 }
