--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ html {
 .background__video {
 	position: sticky;
 	top: 0;
-	height: 110vh;
+	height: 120vh;
 }
 .background__img {
 	display: none;
@@ -643,13 +643,14 @@ html {
     justify-content: center;
 }
 .equipment__card-container {
-	height: clamp(155px, 36vw, 525px);
+	height: clamp(300px, 36vw, 525px);
 	width: auto;
 	display: flex;
 }
 .equipment__card-img {
 	max-width: 100%;
 	max-height: 100%;
+	object-fit: contain;
 }
 .equipment__card-btn {
 	position: absolute;
@@ -1163,7 +1164,7 @@ html {
 .content {
 	padding: 55px 0 110px 0;
 }
-section {
+.scroll {
 	position: sticky;
-	top: 0;
+	top: 100px;
 }
