--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,10 @@ html {
 /* HEADER */
 
 .header {
-	margin: 16px 0;
+	padding: 16px 0;
+}
+.header__dark {
+	background-color: rgba(32, 34, 39, 1);
 }
 .header__content {
 	display: flex;
@@ -605,6 +608,20 @@ html {
 		gap: 10px;
 	}
 }
+.equipment__cards-reset {
+	display: grid;
+	grid-template-columns: repeat(2, minmax(250px, 1fr));
+	grid-template-rows: repeat(2, minmax(600px, 700px));
+	gap: 10px;
+}
+@media(max-width: 846px) {
+	.equipment__cards-reset {
+		display: grid;
+		grid-template-columns: repeat(1, minmax(250px, 1fr));
+		grid-template-rows: repeat(3, clamp(550px, 48vw, 700px));
+		gap: 10px;
+	}
+}
 .equipment__card {
 	background-color: #24262C;
 	border-radius: clamp(10px, 1.4vw, 20px);
@@ -668,6 +685,11 @@ html {
 
 .about {
 	margin: -50px 0 0 0;
+}
+.about__reset {
+	margin: 0;
+	border-radius: 0;
+	background-color: rgba(32, 34, 39, 1);	
 }
 .about__second {
 	position: relative;
