--- a/css/style.css
+++ b/css/style.css
@@ -208,10 +208,19 @@ html {
 	justify-content: center;
 }
 .background__img,
-.background__video {
+.background__video,
+.background__gradient {
 	position: sticky;
 	top: 0;
 	height: 130vh;
+}
+.background__gradient {
+	position: absolute;
+	top: 0;
+	z-index: 500;
+	width: 100vw;
+	height: 100vh;
+	background: radial-gradient(70.13% 70.13% at 50% 50%, rgba(17, 78, 61, 0) 27.17%, rgba(19, 83, 65, 0.149552) 51.59%, rgba(15, 67, 53, 0.226198) 61.66%, rgba(13, 59, 47, 0.31) 76.34%, rgba(7, 39, 30, 0.41) 94.59%);
 }
 .background__img {
 	display: none;
