--- a/css/style.css
+++ b/css/style.css
@@ -210,10 +210,13 @@ html {
 /* WELCOME */
 
 .welcome {
+	position: sticky;
+	top: 0;
+	z-index: -1;
 }
 .background__container {
 	position: absolute;
-	z-index: -1;
+	z-index: -2;
 	height: 100%;
 	width: 100%;
 	display: flex;
