--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html {
 	scroll-behavior: smooth;
 }
 .body {
-	font-family: 'Helvetica Neue';
+	font-family: 'Helvetica Neue', sans-serif;
 }
 .wrapper {
 	min-height: 100%;
