--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ html {
 .welcome {
 	position: sticky;
 	top: 100px;
-	z-index: -1;
+	z-index: 1;
 }
 .background__container {
 	position: absolute;
@@ -352,6 +352,8 @@ html {
 .about {
 	background-color: #24262C;
 	border-radius: clamp(15px, 2vw, 30px);
+	z-index: 2;
+	position: relative;
 }
 .about__content {
 	padding: 110px 0;
@@ -669,6 +671,8 @@ html {
 	border-radius: clamp(15px, 2vw, 30px);
 	background-color: #202227;
 	margin: -50px 0 0 0;
+	z-index: 3;
+	position: relative;
 }
 .equipment__header {
 	margin-bottom: clamp(30px, 6.25vw, 90px);
@@ -819,7 +823,7 @@ html {
 }
 .about__second {
 	position: relative;
-	z-index: 10;
+	z-index: 7;
 }
 .about__second .info__header {
 	margin: 0;
@@ -833,6 +837,8 @@ html {
 	border-radius: clamp(15px, 2vw, 30px);
 	overflow: hidden;
 	margin: -50px 0 0 0;
+	z-index: 5;
+	position: relative;
 }
 @media(max-width: 700px) {
 	.about__image-container {
@@ -850,7 +856,7 @@ html {
 	background: #202227;
 	border-radius: clamp(15px, 2vw, 30px);
 	margin: -50px 0 0 0;
-	z-index: 100;
+	z-index: 8;
 	position: relative;
 }
 
@@ -929,7 +935,7 @@ html {
 	background: #24262C;
 	border-radius: clamp(15px, 2vw, 30px);
 	margin: -50px 0 0 0;
-	z-index: 200;
+	z-index: 9;
 	position: relative;
 }
 @media (max-width: 640px) {
@@ -1020,7 +1026,7 @@ html {
 	background: #0BA785;
     border-radius: clamp(15px, 2vw, 30px) clamp(15px, 2vw, 30px) 0 0;
     margin: -50px 0 0 0;
-    z-index: 300;
+    z-index: 10;
     position: relative;
 }
 .form__content {
@@ -1235,6 +1241,7 @@ html {
 	background: #0BA785;
 	border-top: 0.5px solid #ffffff7e;
 	padding: 55px 0;
+	z-index: 11;
 }
 .footer .info__title {
 	margin: 0;
